homarr/homarr-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: homarr
  labels:
    name: homarr
