homarr/homarr-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: homarr
  labels:
    app: homarr
spec:
  selector:
    matchLabels:
      app: homarr
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homarr
    spec:
      serviceAccountName: homarr-sa
      securityContext:
        fsGroup: 1000
      containers:
      - name: homarr
        image: ghcr.io/ajnart/homarr:0.16.1
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 7575
          name: homarr
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: homarr
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: homarr
          initialDelaySeconds: 15
          periodSeconds: 5
        volumeMounts:
        - name: homarr-data
          mountPath: /app/data/configs
      volumes:
        - name: homarr-data
          persistentVolumeClaim:
            claimName: homarr-claim0
      restartPolicy: Always
