homarr/homarr-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: homarr
  labels:
    app: homarr
spec:
  type: ClusterIP
  ports:
  - name: homarr
    port: 80
    protocol: TCP
    targetPort: 7575
  selector:
    app: homarr
