homarr/hoimarr-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.dashboard.test.com`)
      kind: Rule
      services:
        - name: homarr
          port: 80
    - match: Host(`dashboard.test.com`)
      kind: Rule
      services:
        - name: homarr
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-test-com-tls
