homarr/homarr-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
  namespace: homarr
  labels:
    app: homarr
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.yourdomain.com`)
      kind: Rule
      services:
        - name: homarr
          port: 80
  tls:
    certResolver: le
